@@ -1,3 +1,8 @@
+2008-01-05  Raphael Ackermann <raphael.ackermann@gmail.com>
+	* src/src/plugins/Verify.py:
+	Patch from Raphael Ackermann
+	Fix 0001505: Verifying database signals dead father, when he is not a father.
+
 2008-01-05  Brian Matherly <brian@gramps-project.org>
 	* src/ReportBase/_ReportDialog.py:
 	* src/ReportBase/_BareReportDialog.py:
